--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-pro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ShafeequeAli.github.io/movie-info",
+  "homepage": "https://ShafeequeAli.github.io/movie",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
