--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "deploy": "npm run build&&gh-pages -d build",
+    "deploy": "gh-pages-deploy",
+    "clean-source": "rimraf README.md src webroot package.json",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
